fixed overflow

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -180,8 +180,8 @@ header{
     background-color: var(--clr-primary-500);
     color: var(--clr-neutral-50);
     .navbar{
-        min-height: 8vh;
-        min-height: 8svh;
+        max-height: 8vh;
+        max-height: 8svh;
         padding: 1rem 0;
         display: flex;
         flex-direction: row;
